<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tiler_buddy.view.CalculatedActivity">

    <TextView
        android:id="@+id/wall_area_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:text="@string/placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/square_m1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tiles_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/num_tiles"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tile_area_txt" />

    <TextView
        android:id="@+id/tiles_num_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/pieces"
        app:layout_constraintTop_toBottomOf="@+id/tile_area_value" />

    <TextView
        android:id="@+id/tile_area_value"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/square_m2"
        app:layout_constraintTop_toBottomOf="@+id/wall_area_value" />

    <TextView
        android:id="@+id/tile_area_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tile_area"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wall_area_txt" />

    <TextView
        android:id="@+id/wall_area_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/wall_area"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/square_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/square_meter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/square_m2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/square_meter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square_m1" />

    <TextView
        android:id="@+id/pieces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/pieces"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square_m2" />

</androidx.constraintlayout.widget.ConstraintLayout>