<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/obs_bottom_txt"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/obs_from_bottom_txt"
        app:layout_constraintEnd_toStartOf="@+id/obs_from_bot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obs_left_txt" />

    <EditText
        android:id="@+id/obs_from_bot"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/obs_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/obs_bottom_txt"
        app:layout_constraintTop_toBottomOf="@+id/obs_from_left"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/obs_left_txt"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/obs_from_left_txt"
        app:layout_constraintEnd_toStartOf="@+id/obs_from_left"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obs_height_txt" />

    <EditText
        android:id="@+id/obs_from_left"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/obs_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/obs_left_txt"
        app:layout_constraintTop_toBottomOf="@+id/obs_height_in"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/obs_height_in"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/obs_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/obs_height_txt"
        app:layout_constraintTop_toBottomOf="@+id/obs_length_in"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/obs_length_in"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/obs_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/obs_length_txt"
        app:layout_constraintTop_toBottomOf="@+id/obs_name"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/obs_length_txt"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/length_mm"
        app:layout_constraintEnd_toStartOf="@+id/obs_length_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obs_name" />

    <TextView
        android:id="@+id/obs_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/obs_txt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/obs_height_txt"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/height_mm"
        app:layout_constraintEnd_toStartOf="@+id/obs_height_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obs_length_txt" />

    <ImageButton
        android:id="@+id/delete_obs"
        android:layout_width="46dp"
        android:layout_height="31dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/obs_length_in"
        app:layout_constraintStart_toEndOf="@+id/obs_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>